color bug on mobile

--- a/src/components/Todo/TodoEntry/TodoEntry.css
+++ b/src/components/Todo/TodoEntry/TodoEntry.css
@@ -5,6 +5,7 @@
     border: 1px solid rgb(200, 187, 187);
     border-radius: 10px;
     margin: 2px;
+    color: black
 }
 
 /* TodoEntry */
@@ -17,7 +18,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    color: black;
 }
+
+
 
 .todo-entry:hover {
     transform: scale(1.02);
